# Tracy

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: application.rs  game.rs  image_resource.rs  load_scene.rs  main.rs  material_resource.rs  mesh_resource.rs  parameter.rs  project.rs  resource.rs  resources.rs  scene_graph.rs  schema.rs  server.rs  user_interface.rs
core/: Cargo.toml
editor/: package-lock.json  package.json
editor/src/: App.js  index.js  my_component.jsx
editor/src/components/: App.jsx  app_bar.jsx  assets_browser.jsx  middle.jsx  scene_graph_tree_view.jsx  viewport.jsx
editor/src/gql/: gql_client.jsx
editor/src/gql/mutations/: import_mutations.jsx  (+1 more)
editor/src/styles/: index.css
examples/: cube_instancing.rs  floor.rs  gltf_import.rs  material_instancing.rs  simple_cube.rs  skybox.rs  textured_cube.rs
renderer/: Cargo.toml
renderer/src/: asset.rs  buffer_resource.rs  camera.rs  context.rs  cpu_resource_cache.rs  cpu_scene.rs  ctx.rs  descriptor_sets.rs  geometry.rs  gpu_path_tracer.rs  gpu_resource.rs  gpu_resource_cache.rs  gpu_scene.rs  image_resource.rs  instance.rs  lib.rs  material.rs  material_resource.rs  mesh.rs  mesh_resource.rs  rasterizer.rs  renderer.rs  resource.rs  resources.rs  rtx_extensions.rs  scene.rs  scene_data.rs  shape.rs  spirv.rs  uid_object.rs
server/: Cargo.toml
server/src/: application.rs  image_renderer.rs  image_resource.rs  instancer.rs  load_scene.rs  main.rs  material_resource.rs  mesh_resource.rs  project.rs  resource.rs  resources.rs  scene_graph.rs  schema.rs  server.rs  simple_shapes.rs
shaders/: closesthit.rchit  closesthit.rchit.spv  image_blend_add.frag  image_blend_add.frag.spv  light.glsl  material.glsl  miss.rmiss  miss.rmiss.spv  payload.glsl  random.glsl  rasterizer.frag  rasterizer.frag.spv  rasterizer.vert  rasterizer.vert.spv  rgen.rgen  rgen.rgen.spv  sampled_image.frag  sampled_image.frag.spv  sampled_image.vert  sampled_image.vert.spv  scatter.glsl  sphere.rint  sphere.rint.spv
shaders/simple_pipeline/: bsdf.glsl  closest_hit.rchit  closest_hit.rchit.spv  constants.glsl  material.glsl  object.glsl  random.glsl  ray_gen.rgen  ray_gen.rgen.spv  ray_miss.rmiss  ray_miss.rmiss.spv  ray_payload.glsl  scatter.glsl
src/: application.rs  camera.rs  ctx.rs  descriptor_sets.rs  framebuffer.rs  geometry.rs  gpu_path_tracer.rs  gpu_resource.rs  gpu_resource_cache.rs  gpu_scene.rs  image_resource.rs  instance.rs  lib.rs  main.rs  material.rs  material_resource.rs  math.rs  mesh.rs  mesh_instance.rs  mesh_resource.rs  rtx_extensions.rs  rtx_pipeline.rs  scene.rs  shape.rs  skybox.rs  ui_window.rs
ui/: Cargo.toml
ui/src/: application.rs  button.rs  canvas3d.rs  canvas_2d.rs  constraints.rs  flex.rs  image_renderer.rs  lib.rs  list.rs  main.rs  node.rs  skia_vulkan_canvas.rs  slider.rs  style.rs  swapchain.rs  text_editor.rs  theme.rs  ui_application_delegate.rs  ui_gpu_drawing_window_delegate.rs  ui_window.rs  user_interface.rs  widget.rs  window.rs  window_delegate.rs  window_event.rs
vk_utils/: Cargo.toml
vk_utils/src/: buffer_resource.rs  command_buffer.rs  command_buffer_handle.rs  device_context.rs  gpu.rs  graphics_command_buffer.rs  graphics_pipeline.rs  graphics_pipeline_state.rs  graphics_queue.rs  image_resource.rs  lib.rs  memory.rs  queue.rs  renderpass.rs  shader_library.rs  swapchain.rs  swapchain_image.rs  swapchain_util.rs  vk_instance.rs  vulkan.rs  wait_handle.rs
(+3 files in other folders)
