[package]
name = "renderer"
version = "0.1.0"
authors = ["Danny van Swieten <dannyvanswieten@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vk_utils = {git = "https://github.com/DannyvanSwieten/vk_utils.git"}
ash = "*"
byteorder = "*"
cgmath = "0.18"
slotmap = "*"
image = "*"
