[package]
name = "tracey"
version = "0.1.0"
authors = ["Danny van Swieten <dannyvanswieten@gmail.com>"]
edition = "2018"

[dependencies]
renderer = {path = "../renderer"}
vk_utils = {path = "../vk_utils"}
ui = {path = "../ui"}
ash = "*"
ash-window = "*"
winit = "*"
image = "*"
nalgebra-glm = "*"
gltf = "*"
legion = {version = "*"}
skia-safe = "*"