[package]
name = "tracey"
version = "0.1.0"
authors = ["Danny van Swieten <dannyvanswieten@gmail.com>"]
edition = "2018"

[dependencies]
renderer = {path = "../renderer"}
vk_utils = {path = "../vk_utils"}
ui = {path = "../ui"}
ash = "0.35.0"
ash-window = "0.9"
winit = "*"
image = "*"
nalgebra-glm = "*"
gltf = "*"
legion = {version = "*"}
skia-safe = "*"
rapier3d = "*"
rand = "*"