[package]
name = "tracey"
version = "0.1.0"
authors = ["Danny van Swieten <dannyvanswieten@gmail.com>"]
edition = "2021"

[dependencies]
renderer = {path = "../renderer"}
vk_utils = {path = "../vk_utils"}
ui = {path = "../ui"}
ash = "*"
image = "*"
nalgebra-glm = "*"
gltf = "*"
rand = "*"
async-graphql = "3.0.27"
async-graphql-poem = "3.0.27"
poem = "1.2.56" 
futures = "0.3.21"
tokio = {version = "1.16.1", features = ["full"]}
tokio-stream = {version = "0.1.8", features = ["sync"]}
serde_json = "1.0.78"
winit = "*"
directories = "*"