[package]
name = "tracey"
version = "0.1.0"
authors = ["Danny van Swieten <dannyvanswieten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
core = { path = "../core"}
ash = "*"
ash-window = "*"
winit = "*"
skia-safe = { version = "*", features = ["vulkan", "gpu"] }