[package]
name = "ui"
version = "0.1.0"
authors = ["Danny van Swieten <dannyvanswieten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vk_utils = {path = "../vk_utils"}
ash = "*"
ash-window = "*"
winit = "*"
byteorder = "*"
skia-safe = { version = "*", features = ["vulkan", "gpu"] }